# 3hdm

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
doc/examples/: tutorial_combination.cpp  tutorial_group  tutorial_group.cpp  tutorial_group.json  tutorial_group_list.cpp  tutorial_invariance_equation_solver.cpp  tutorial_matrix_form.cpp  tutorial_mymatrix.cpp  tutorial_mymatrix.txt  tutorial_real_life_example.cpp  tutorial_representation.cpp  tutorial_representation.txt  tutorial_unique_solutions_seeker.cpp
doc/examples/include/: tutorial.cpp  tutorial.h
include/3hdm/: combination.h  group.h  group_list.h  invariance_equation_solver.h  matrix_form.h  mymatrix.h  mymatrix_simpl.h  representation.h  unique_solutions_seeker.h  utilities.h
input/: [ 21, 1 ].json  [ 24, 12 ].json  [ 24, 3 ].json  [ 27, 3 ].json  [ 48, 28 ].json  [ 48, 29 ].json  [ 48, 30 ].json  [ 48, 31 ].json  [ 48, 32 ].json  [ 48, 33 ].json  [ 48, 48 ].json  [ 48, 49 ].json  [ 54, 10 ].json  [ 54, 11 ].json  [ 54, 8 ].json  [ 57, 1 ].json  [ 63, 3 ].json  [ 72, 16 ].json  [ 72, 25 ].json  [ 72, 42 ].json  [ 72, 43 ].json  [ 78, 2 ].json  [ 81, 12 ].json  [ 81, 13 ].json  [ 81, 6 ].json  [ 81, 7 ].json  [ 84, 10 ].json  [ 84, 2 ].json  [ 84, 9 ].json  [ 93, 1 ].json  [ 96, 186 ].json  [ 96, 187 ].json  [ 96, 190 ].json  [ 96, 192 ].json  [ 96, 193 ].json  [ 96, 195 ].json  [ 96, 197 ].json  [ 96, 198 ].json  [ 96, 200 ].json  [ 96, 202 ].json  (+11 more)
input/groups/: [ 12, 3 ].json  [ 24, 13 ].json  [ 27, 4 ].json  [ 36, 11 ].json  [ 36, 3 ].json  [ 39, 1 ].json  [ 42, 2 ].json  [ 48, 3 ].json  [ 48, 50 ].json  [ 60, 9 ].json  [ 63, 1 ].json  [ 72, 15 ].json  [ 72, 3 ].json  [ 72, 44 ].json  [ 72, 47 ].json  [ 75, 2 ].json  [ 81, 10 ].json  [ 81, 14 ].json  [ 81, 3 ].json  [ 81, 4 ].json  [ 81, 8 ].json  [ 81, 9 ].json  [ 84, 11 ].json  [ 96, 185 ].json  [ 96, 188 ].json  [ 96, 189 ].json  [ 96, 191 ].json  [ 96, 194 ].json  [ 96, 196 ].json  [ 96, 199 ].json  [ 96, 201 ].json  [ 96, 203 ].json  [ 96, 226 ].json  [ 96, 227 ].json  [ 96, 229 ].json  [ 96, 3 ].json  [ 96, 67 ].json  [ 96, 74 ].json
inputs/: gens.txt
inputs/groups/: [ 108, 15 ]  [ 12, 3 ]  [ 21, 1 ]  [ 24, 12 ]  [ 24, 13 ]  [ 24, 3 ]  [ 27, 3 ]  [ 27, 4 ]  [ 36, 11 ]  [ 36, 3 ]  [ 39, 1 ]  [ 42, 2 ]  [ 48, 29 ]  [ 48, 3 ]  [ 48, 30 ]  [ 48, 31 ]  [ 48, 32 ]  [ 48, 48 ]  [ 48, 49 ]  [ 48, 50 ]  [ 54, 10 ]  [ 54, 11 ]  [ 54, 8 ]  [ 57, 1 ]  [ 60, 9 ]  [ 63, 1 ]  [ 63, 3 ]  [ 72, 15 ]  [ 72, 16 ]  [ 72, 25 ]  [ 72, 3 ]  [ 72, 42 ]  [ 72, 44 ]  [ 72, 47 ]  [ 75, 2 ]  [ 78, 2 ]  [ 81, 10 ]  [ 81, 12 ]  [ 81, 13 ]  [ 81, 14 ]  (+32 more)
scripts/: binary.py  build.py  format.py
src/: combination.cpp  group.cpp  group_list.cpp  invariance_equation_solver.cpp  matrix_form.cpp  unique_solutions_seeker.cpp  utilities.cpp
